--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -7,11 +7,9 @@ output: html_document
 
 # Libraries and Paths
 
-library(rasterVis)
 library(ggplot2)
 library(maps)
 library(readr)
-library(raster)
 library(data.table)
 library(tidyr)
 library(dplyr)
@@ -31,12 +29,12 @@ source('R/data_explore_fxns.R')
 
 # Data files
 #iucn spp cells WITHOUT extinct locations of IUCN subpopulations
-iucn_spp_cells <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/iucn_spp_cells_both.csv'), 
+iucn_spp_cells <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/iucn_spp_cells_2015.csv'), 
                            col_types = 'cdddd', progress = TRUE) %>%
   as.data.frame() %>%
   filter(presence != 5) ### removes extinct subpopulations
 
-am_spp_cells   <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/am_spp_cells.csv'), progress = TRUE)
+am_spp_cells   <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/am_spp_cells_2015.csv'), progress = TRUE)
 
 
 ### LOICZID cell ID numbers - used in plotting rasters
@@ -47,24 +45,26 @@ names(loiczid_raster) <- 'loiczid'
 
 
 ```{r get_spp_list, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-data_file <- 'data/spp_list_w_area_percent_noextinct.csv'
+data_file <- 'data/spp_list_w_area_percent_noextinct_2015.csv'
 
 
-if(!file.exists(data_file)) {
+if (!file.exists(data_file)) {
   ### species info list - scinames, IUCN species ID, AM species ID, category etc
-  spp_list_base <- read.csv('shiny/data/spp_am_v_iucn.csv', stringsAsFactors = FALSE)
+  spp_list_base <- read.csv('data/spp_am_v_iucn_2015_inclDD.csv', stringsAsFactors = FALSE)
   
   create_spp_list(spp_list_base, data_file)
 }
 
-spp_list <- read.csv(data_file, stringsAsFactors = FALSE)
+spp_list <- read.csv(data_file, stringsAsFactors = FALSE) %>%
+  filter(!is.na(sm_perc)) ### will ditch the ones where no IUCN polygon exists
+
 ```
 
 ``` {r child = 'R/data_explore_pt1.Rmd', eval = FALSE}
-# bar chart: number of spp per group
-# scatter plot: area compare IUCN vs AM, including log plot and plot by species group
-# rangemap: Chromis alpha 
 ```
+<!-- # bar chart: number of spp per group
+# scatter plot: area compare IUCN vs AM, including log plot and plot by species group
+# rangemap: Chromis alpha --> 
 
 ``` {r, child = 'R/data_explore_pt2.Rmd', eval = FALSE}
 ```
@@ -83,26 +83,25 @@ area_ratio_quartiles <- quantile(spp_list$area_ratio, na.rm = TRUE)[2:4]
 pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
 
 ### define representative species from each quadrant, for over-plotting
-spp_quads <- c('q1' = 'Kajikia albida', 
-               'q2' = 'Galaxea cryptoramosa', 
-               'q4' = 'Acanthurus nigroris', 
-               'q4a' = 'Metanephrops australiensis', 
-               'q3' = 'Conus magnificus')
+# spp_quads <- c('q1' = 'Kajikia albida', 
+#                'q2' = 'Galaxea cryptoramosa', 
+#                'q4' = 'Acanthurus nigroris', 
+#                'q4a' = 'Metanephrops australiensis', 
+#                'q3' = 'Conus magnificus')
 
 ### truncate the species names for the representative species
-spp_list_label <- spp_list %>%
-  filter(sciname %in% spp_quads) %>%
-  separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
-  mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
-  select(-g, -s)
+# spp_list_label <- spp_list %>%
+#   filter(sciname %in% spp_quads) %>%
+#   separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
+#   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
+#   select(-g, -s)
 
 ### mongo plot time
 scatter_arearatio_vs_overlap <- ggplot(spp_list %>% 
                                          transform(popn_category = reorder(popn_category, category_score)),
                                        aes(x = area_ratio, y = sm_perc, 
                                            color = popn_category,
-                                           size = popn_category
-                                           )) + 
+                                           size = popn_category)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
     annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
@@ -118,19 +117,20 @@ scatter_arearatio_vs_overlap <- ggplot(spp_list %>%
                                  'NT' = 'greenyellow', 
                                  'VU' = 'yellow', 
                                  'EN' = 'orange', 
-                                 'CR' = 'orangered2')) +
+                                 'CR' = 'orangered2',
+                                 'DD' = 'grey30')) +
   geom_vline(x = area_ratio_quartiles[c(1, 3)],
              color = 'grey50', linetype = 'dashed') +
   geom_hline(y = pct_overlap_quartiles[c(1, 3)],
              color = 'grey50', linetype = 'dashed') +
-  geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
-  geom_text(data = spp_list_label, 
-            aes(label = sciname_label), 
-            color = 'grey30',
-            fontface = 'bold.italic',
-            size = 2,
-            hjust = .25,
-            vjust = 1.5) +
+#   geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
+#   geom_text(data = spp_list_label, 
+#             aes(label = sciname_label), 
+#             color = 'grey30',
+#             fontface = 'bold.italic',
+#             size = 2,
+#             hjust = .25,
+#             vjust = 1.5) +
   labs(x = 'Area match: \n(range area smaller : range area larger) * 100%', 
        y = 'Distribution match: \n % overlap of smaller range w/ larger', 
        title = 'Area match vs distribution match',
@@ -142,7 +142,7 @@ print(scatter_arearatio_vs_overlap)
 
 ```
 
-```{r plot_spp_from_quadrants, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
+```{r plot_spp_from_quadrants, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
 
 for (i in 1:length(spp_quads)) { # i = 1
   spp <- spp_quads[i]
@@ -169,13 +169,13 @@ spp_list1 <- spp_list %>%
 
 ### Create species lists by quadrant
 spp_list_q1 <- spp_list1 %>%
-  filter(area_ratio >= median(area_ratio, na.rm = TRUE) & sm_perc >= median(sm_perc, na.rm = TRUE))
+  filter(area_ratio >= median(area_ratio) & sm_perc >= median(sm_perc))
 spp_list_q2 <- spp_list1 %>%
-  filter(area_ratio < median(area_ratio, na.rm = TRUE) & sm_perc >= median(sm_perc, na.rm = TRUE))
+  filter(area_ratio < median(area_ratio) & sm_perc >= median(sm_perc))
 spp_list_q3 <- spp_list1 %>%
-  filter(area_ratio >= median(area_ratio, na.rm = TRUE) & sm_perc < median(sm_perc, na.rm = TRUE))
+  filter(area_ratio >= median(area_ratio) & sm_perc < median(sm_perc))
 spp_list_q4 <- spp_list1 %>%
-  filter(area_ratio < median(area_ratio, na.rm = TRUE) & sm_perc < median(sm_perc, na.rm = TRUE))
+  filter(area_ratio < median(area_ratio) & sm_perc < median(sm_perc))
 
 ### Summarize quadrant species list by species group (e.g. CORALS1)
 spp_gp_q1 <- spp_list_q1 %>%
@@ -193,18 +193,20 @@ spp_gp_q4 <- spp_list_q4 %>%
 
 ### Join species group by quadrant into a single dataframe
 spp_gp_quadrants <- spp_gp_q1 %>%
-  left_join(spp_gp_q2, by = c('spp_group', 'n_spp')) %>%
-  left_join(spp_gp_q3, by = c('spp_group', 'n_spp')) %>%
-  left_join(spp_gp_q4, by = c('spp_group', 'n_spp')) %>%
+  full_join(spp_gp_q2, by = c('spp_group', 'n_spp')) %>%
+  full_join(spp_gp_q3, by = c('spp_group', 'n_spp')) %>%
+  full_join(spp_gp_q4, by = c('spp_group', 'n_spp')) %>%
   gather(quad, n_quad, n_spp_q1, n_spp_q2, n_spp_q3, n_spp_q4) %>% 
   mutate(quad = str_replace(quad, 'n_spp_', ''),
-         pct_quad = n_quad/n_spp)
+         pct_quad = n_quad/n_spp,
+         n_quad   = ifelse(is.na(n_quad),   0, n_quad),
+         pct_quad = ifelse(is.na(pct_quad), 0, pct_quad))
 
 
 spp_gp_quadrants <- spp_gp_quadrants %>%
   left_join(spp_gp_quadrants %>% 
               filter(quad == 'q1') %>%
-              select(spp_group, pct_q1 = pct_quad),
+              dplyr::select(spp_group, pct_q1 = pct_quad),
             by = 'spp_group') %>%
   mutate(quad = str_replace(quad, 'q1', 'q1 well-matched'),
          quad = str_replace(quad, 'q2', 'q2 dist-matched'),
@@ -225,7 +227,8 @@ barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>%
   coord_flip() +
   labs(x = 'Species Group', 
        y = 'Relative number of species per quadrant', 
-       title = 'Species group breakdown by quadrant')
+       title = 'Species group breakdown by quadrant',
+       fill = 'Match quadrant')
 
 print(barchart_spp_gp_quads)
 ggsave(plot = barchart_spp_gp_quads,
@@ -236,142 +239,179 @@ ggsave(plot = barchart_spp_gp_quads,
 
 
 ``` {r child = 'R/data_explore_pt3.Rmd', eval = FALSE}
-# Multiple species maps per quadrant
 ```
+<!-- # Multiple species maps per quadrant -->
+
+
+***
+
+Breakdown maps by taxa
+
+``` {r load data, echo = FALSE, warning = FALSE, message = FALSE}
+### use data_explore.Rmd to create this file, if it does not yet exist.
+
+data_file <- 'data/spp_list_w_area_percent_noextinct_2015.csv'
+spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
+  filter(!is.na(popn_category)) %>% ### filter out unassessed species
+  filter(!is.na(sm_perc))           ### filter out NA maps (usually IUCN maps with no polygons)
+
+### generate other lists
+
+spp_all_file <- 'data/spp_all_2015.csv'
+spp_all <- read.csv(spp_all_file, stringsAsFactors = FALSE) 
+
+iucn_marine_file <- 'data/spp_iucn_marine.csv'
+spp_iucn_marine <- read.csv(iucn_marine_file, stringsAsFactors = FALSE) 
+
+iucn_maps_file <- 'data/spp_iucn_maps.csv'
+spp_iucn_maps <- read.csv(iucn_maps_file, stringsAsFactors = FALSE) %>%
+  filter(spp_group != 'hagfishes') %>%           ### not from IUCN...
+  filter(sciname %in% spp_iucn_marine$sciname)   ### ditch freshwater spp
+
+spp_am_file <- 'data/spp_am.csv'
+spp_am <- read.csv(spp_am_file, stringsAsFactors = FALSE)
+
+```
+
+``` {r breakdown by taxa, echo = FALSE, message = FALSE, warning = FALSE}
+
+sciname_lookup <- read.csv('sciname_lookups/spp_iucn_all.csv', stringsAsFactors = FALSE)
+
+iucn_maps_class <- spp_iucn_maps %>% 
+  left_join(sciname_lookup %>% 
+              select(sciname, class) %>%
+              unique(), 
+            by = 'sciname')
+
+taxa_iucn_all <- iucn_maps_class[!duplicated(iucn_maps_class$sciname), ] %>%
+  filter(!is.na(class)) %>% ### don't count the unknowns
+  mutate(class = str_to_title(class),
+         n_iucn_tot = n()) %>%        ### length of whole maps list
+  group_by(class) %>%
+  summarize(n_iucn_class_all  = n(),
+            p_iucn_class_all  = round((n_iucn_class_all/first(n_iucn_tot) * 100), 2))
+
+taxa_iucn_solo <- iucn_maps_class[!duplicated(iucn_maps_class$sciname), ] %>%
+  filter(!is.na(class)) %>% ### don't count the unknowns
+  filter(!sciname %in% spp_am$sciname) %>%  ### filter list to IUCN only
+  mutate(class = str_to_title(class),
+         n_iucn_solo = n()) %>%       ### length of IUCN only list
+  group_by(class) %>%
+  summarize(n_iucn_class_solo = n(),
+            p_iucn_class_solo = round((n_iucn_class_solo/first(n_iucn_solo) * 100), 2))
+
+taxa_am_all <- spp_am %>%
+  filter(!class %in% c('Not assigned', 'null') & !is.na(class)) %>%
+  mutate(class = str_to_title(class),
+         n_am_tot = n()) %>%        ### length of whole AM maps list
+  group_by(class) %>%
+  summarize(n_am_class_all  = n(),
+            p_am_class_all  = round((n_am_class_all/first(n_am_tot) * 100), 2))
+
+taxa_am_solo <- spp_am %>%
+  filter(!class %in% c('Not assigned', 'null') & !is.na(class)) %>%
+  filter(!sciname %in% iucn_maps_class$sciname) %>%  ### filter list to AM only
+  mutate(class = str_to_title(class),
+         n_am_solo = n()) %>%       ### length of AM only list
+  group_by(class) %>%
+  summarize(n_am_class_solo = n(),
+            p_am_class_solo = round((n_am_class_solo/first(n_am_solo) * 100), 2))
+
+taxa_both <- spp_am %>%
+  filter(sciname %in% spp_iucn_maps$sciname) %>%
+  filter(!class %in% c('Not assigned', 'null')) %>%
+  mutate(class = str_to_title(class),
+         n_both_tot = n()) %>%
+  group_by(class) %>%
+  summarize(n_class_both = n(),
+            p_class_both = round(n_class_both/first(n_both_tot) * 100, 2))
+
+taxa_am_all_assessed <- spp_am %>%
+  filter(!class %in% c('Not assigned', 'null') & !is.na(class)) %>%
+  filter(sciname %in% spp_iucn_marine$sciname) %>%
+  mutate(class = str_to_title(class),
+         n_am_tot = n()) %>%        ### length of whole AM maps list
+  group_by(class) %>%
+  summarize(n_am_class_ass  = n(),
+            p_am_class_ass  = round((n_am_class_ass/first(n_am_tot) * 100), 2))
+
+taxa_am_solo_assessed <- spp_am %>%
+  filter(!class %in% c('Not assigned', 'null') & !is.na(class)) %>%
+  filter(sciname %in% spp_iucn_marine$sciname) %>%
+  filter(!sciname %in% iucn_maps_class$sciname) %>%  ### filter list to AM only
+  mutate(class = str_to_title(class),
+         n_am_solo = n()) %>%       ### length of AM only list
+  group_by(class) %>%
+  summarize(n_am_class_solo_ass = n(),
+            p_am_class_solo_ass = round((n_am_class_solo_ass/first(n_am_solo) * 100), 2))
+
+taxa_df <- taxa_am_all %>%
+  full_join(taxa_am_solo,   by = 'class') %>%
+  full_join(taxa_am_all_assessed,  by = 'class') %>%
+  full_join(taxa_am_solo_assessed, by = 'class') %>%
+  full_join(taxa_iucn_all,  by = 'class') %>%
+  full_join(taxa_iucn_solo, by = 'class') %>%
+  full_join(taxa_both,      by = 'class') %>%
+  filter(!(is.na(n_iucn_class_all) & p_am_class_all < 0.5))
+
+
+knitr::kable(taxa_df %>%
+               select(class, AquaMaps = n_am_class_all, IUCN = n_iucn_class_all, Both = n_class_both))
+```
+
+``` {r plot bar charts by taxa, echo = FALSE, message = FALSE, warning = FALSE}
+### bar charts comparing number of species in each class for each data set
+
+taxa_df_long1 <- taxa_df %>%
+  select(class, AquaMaps = n_am_class_all, IUCN = n_iucn_class_all, Both = n_class_both) %>%
+  gather(dataset, n_spp, AquaMaps:Both)
+bar_taxa1 <- ggplot(taxa_df_long1, aes(x = class, y = n_spp)) +
+  ggtheme_plot + 
+  geom_bar(stat = 'identity') +
+  facet_grid(dataset ~ ., scales = 'free_y') +
+  theme(axis.text.x = element_text(angle = 75, hjust = 1))
+print(bar_taxa1)
+
+taxa_df_long2 <- taxa_df %>%
+  select(class, AquaMaps = n_am_class_solo, IUCN = n_iucn_class_solo, Both = n_class_both) %>%
+  gather(dataset, n_spp, AquaMaps:Both) %>%
+  group_by(class) %>%
+  mutate(n_total = sum(n_spp, na.rm = TRUE),
+         percent = n_spp/n_total * 100)
+bar_taxa2 <- ggplot(taxa_df_long2, aes(x = class, y = percent, fill = dataset)) +
+  ggtheme_plot + 
+  geom_bar(stat = 'identity', alpha = .5) +
+  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
+  geom_text(aes(label = sprintf('n = %s', n_total), y = .05), hjust = 0, size = 4, angle = 90, hjust = 1) +
+  theme(axis.text.x = element_text(angle = 75, hjust = 1)) + 
+  labs(x = 'Class', y = 'Percent of mapped species',
+       title = 'Distribution of species maps by taxonomic group (class)')
+print(bar_taxa2)
+ggsave(filename = file.path(dir_fig, 'bar_by_taxa_all.png'), height = 4, width = 8)
+
+taxa_df_long3 <- taxa_df %>%
+  select(class, AquaMaps = n_am_class_solo_ass, IUCN = n_iucn_class_solo, Both = n_class_both) %>%
+  gather(dataset, n_spp, AquaMaps:Both) %>%
+  group_by(class) %>%
+  mutate(n_total = sum(n_spp, na.rm = TRUE),
+         percent = n_spp/n_total * 100)
+bar_taxa3 <- ggplot(taxa_df_long3, aes(x = class, y = percent, fill = dataset)) +
+  ggtheme_plot + 
+  geom_bar(stat = 'identity', alpha = .5) +
+  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
+  geom_text(aes(label = sprintf('n = %s', n_total), y = .05), hjust = 0, size = 4, angle = 90, hjust = 1) +
+  theme(axis.text.x = element_text(angle = 75, hjust = 1)) + 
+  labs(x = 'Class', y = 'Percent of mapped and assessed species',
+       title = 'Distribution of species maps by taxonomic group (class)')
+print(bar_taxa3)
+ggsave(filename = file.path(dir_fig, 'bar_by_taxa_assessed.png'), height = 4, width = 8)
+
+```
+
 
 *** 
 
-###Global representation of species
-
-By counting the number of unique species are found in each of the half degree cells we can then create a single global raster of number of species.
-
-```{r global_dist_map, echo = FALSE, warning = FALSE, message = FALSE}
-
-### find total species in each dataset for later percent calcs
-am_n_tot   <- am_spp_cells %>% 
-  filter(am_sid %in% unique(spp_list$am_sid)) %>%
-  select(am_sid) %>% 
-  unique() %>% nrow()
-iucn_n_tot <- iucn_spp_cells %>% 
-  filter(sciname %in% unique(spp_list$sciname)) %>%
-  select(sciname) %>% 
-  unique() %>% nrow()
-### good - the same number
-
-### Number of aquamaps species per cell
-am_n_per_cell <- am_spp_cells %>%
-  filter(am_sid %in% unique(spp_list$am_sid)) %>%
-  group_by(loiczid) %>%
-  summarize(count_am = n(),
-            pct_am = count_am/am_n_tot) %>%
-  as.data.frame()
-
-am_sp_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'count_am')], 
-                  by = 'loiczid', 
-                  which = 'count_am', 
-                  subsWithNA = TRUE)
-
-### Number of IUCN species per cell
-iucn_n_per_cell <- iucn_spp_cells %>%
-  group_by(loiczid) %>%
-  summarize(count_iucn = n(),
-            pct_iucn = count_iucn/iucn_n_tot) %>%
-  as.data.frame()
-
-iucn_sp_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'count_iucn')], 
-                    by = 'loiczid', 
-                    which = 'count_iucn', 
-                    subsWithNA = TRUE)
-
-### Plot both maps
-myTheme <- rasterTheme(region = brewer.pal('Blues', n = 9))
-
-levelplot(am_sp_map, par.settings = myTheme, 
-          main = 'Aquamaps Dataset', 
-          colorkey = list( at = seq(0, 1063, length = 15)))
-
-levelplot(iucn_sp_map, par.settings = myTheme, 
-          main = 'IUCN Dataset', 
-          colorkey = list(at = seq(0, 1063, length = 15)))
-
-```
-
-Now look at all aquamaps species
-
-```{r all_aquamaps, eval = FALSE, echo = FALSE}
-
-am_spp_cells_big <- fread(file.path(dir_anx, 'raw/aquamaps_2014/tables/ohi_hcaf_species_native.csv')) %>%
-  as.data.frame()
-### am_spp_cell_big is missing loiczid info so bring in hcaf to match
-
-hcaf <- fread(file.path(dir_anx, 'raw/aquamaps_2014/tables/hcaf.csv')) %>% #bring this in just to get loiczid
-  as.data.frame() %>%
-  select(CsquareCode, LOICZID) %>%
-  rename(loiczid = LOICZID)
-
-### find total spp to allow for percent calcs later
-am_all_n_tot <- am_spp_cells_big %>% 
-  select(SpeciesID) %>% 
-  unique() %>% nrow()
-
-all_am <- am_spp_cells_big %>%
-  select(SpeciesID, CsquareCode) %>%
-  group_by(CsquareCode) %>%
-  summarize(all_count = n(),
-            all_pct   = all_count/am_all_n_tot) %>%
-  as.data.frame()
-
-all <- all_am %>%
-  left_join(hcaf, by = 'CsquareCode')
-
-all_am_map <- subs(loiczid_raster, all[ , c('loiczid', 'all_count')], 
-                   by = 'loiczid', 
-                   which = 'all_count', 
-                   subsWithNA = TRUE)
-
-levelplot(all_am_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset')
-```
-
-![image](figures/all_aquamaps_map.png)
-
-``` {r variations_on_gl_dist_maps, echo = FALSE, eval = FALSE}
-### find distribution by percent of total species
-am_sp_pct_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'pct_am')], 
-                      by = 'loiczid', 
-                      which = 'pct_am', 
-                      subsWithNA = TRUE)
-iucn_sp_pct_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'pct_iucn')], 
-                        by = 'loiczid', 
-                        which = 'pct_iucn', 
-                        subsWithNA = TRUE)
-### find difference in percent between the two distribution maps; should be small,
-### if species are well-matched, since it's all the same species
-diff_pct_map    <- iucn_sp_pct_map - am_sp_pct_map
-
-### plot maps with distributions as percentages.  Should it be 0 - 1, or 
-### 0 - max value?
-levelplot(am_sp_pct_map, par.settings = myTheme, 
-          main = 'Aquamaps Dataset pct', 
-          colorkey = list( at = seq(0, 1, length = 15)))
-levelplot(iucn_sp_pct_map, par.settings = myTheme, 
-          main = 'IUCN Dataset pct', 
-          colorkey = list(at = seq(0, 1, length = 15)))
-### this is the difference one. Should it be min value to max value?
-levelplot(diff_pct_map, par.settings = myTheme, 
-          main = 'IUCN pct - AM pct', 
-          colorkey = list(at = seq(-1, 1, length = 15)))
-
-### Do similar, but with the full aquamaps list (should also do this
-### against the full IUCN list...)
-all_am_pct_map <- subs(loiczid_raster, all[ , c('loiczid', 'all_pct')], 
-                   by = 'loiczid', 
-                   which = 'all_pct', 
-                   subsWithNA = TRUE)
-
-diff_pct_map2    <- iucn_sp_pct_map - all_am_pct_map
-levelplot(all_am_pct_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset, pct')
-levelplot(diff_pct_map2, par.settings = myTheme, main = 'iucn (overlap only) - aquamaps (all)')
-
+``` {r, child = 'R/data_explore_global_maps.Rmd', eval = FALSE}
 ```
 
 
